# oh-my-dj

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.claude/commands/: release.md
.github/scripts/: Package-Windows.ps1
.github/workflows/: push.yaml  tests.yaml
data/locale/: en-US.ini  es-ES.ini
docs/: forum-submission.md
site/: .gitignore  README.md  package.json  pnpm-lock.yaml  proxy.ts
site/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
site/app/[lang]/: layout.tsx  opengraph-image.tsx  page.tsx
site/components/: Site.tsx
site/lib/: i18n.ts
src/: about-tab.cpp  about-tab.hpp  duration.cpp  duration.hpp  multistream-dock.cpp  multistream-dock.hpp  multistream-engine.cpp  multistream-engine.hpp  oh-my-dj.qrc  overview-dock.cpp  overview-dock.hpp  plugin-main.cpp  rotation-dock.cpp  rotation-dock.hpp  rotation-engine.cpp  rotation-engine.hpp  rotation-plan.cpp  rotation-plan.hpp  rotation-step.cpp  rotation-step.hpp  stream-health.cpp  stream-health.hpp  stream-presets.cpp  stream-presets.hpp  stream-target.hpp  suggest-dialog.cpp  suggest-dialog.hpp  update-check-mac.mm  update-check.cpp  update-check.hpp
tests/: CMakeLists.txt  test_health.cpp  test_plan.cpp  test_presets.cpp  test_rotation.cpp
